@@ -31,6 +31,8 @@ import lombok.RequiredArgsConstructor;
  * Helper to access to the BPMN semantic part
  */
 @RequiredArgsConstructor
+// TODO switch to record
+// TODO lombok getter on class
 public class Semantic {
 
     @NonNull
@@ -42,18 +44,12 @@ public class Semantic {
         return ((TBaseElement) object).getId();
     }
 
-    public List<TParticipant> getParticipants() {
-        return getCollaboration()
-                .map(TCollaboration::getParticipant)
-                .orElseGet(Collections::emptyList);
-    }
-
     public Optional<TCollaboration> getCollaboration() {
         List<TCollaboration> collaborations = definitions.getRootElement().stream()
                 .map(JAXBElement::getValue)
                 .filter(TCollaboration.class::isInstance)
                 .map(TCollaboration.class::cast)
-                .collect(Collectors.toList());
+                .toList();
 
         // TODO check at most 1 otherwise error
         // TODO refactor into a more functional way
@@ -106,9 +102,7 @@ public class Semantic {
 
     public static void addFlowNodes(TProcess process, Collection<TFlowNode> flowElements) {
         flowElements.stream()
-                .map(f -> {
-                    return new JAXBElement<>(bpmnElementQName(f), TFlowNode.class, null, f);
-                })
+                .map(f -> new JAXBElement<>(bpmnElementQName(f), TFlowNode.class, null, f))
                 .forEach(f -> process.getFlowElement().add(f));
     }
 
@@ -123,7 +117,7 @@ public class Semantic {
     }
 
     //TODO add other type of flow node elements
-    private static final Map<Class<? extends TFlowNode>, String> bpmnElementBindings = new HashMap<Class<? extends TFlowNode>, String>() {{
+    private static final Map<Class<? extends TFlowNode>, String> bpmnElementBindings = new HashMap<>() {{
         put(TParallelGateway.class, "parallelGateway");
         put(TInclusiveGateway.class, "inclusiveGateway");
         put(TExclusiveGateway.class, "exclusiveGateway");
